--- a/CIFAR10_and_Dog_Breed_Identification.ipynb
+++ b/CIFAR10_and_Dog_Breed_Identification.ipynb
@@ -6,10 +6,7 @@
       "name": "CIFAR10 and Dog Breed Identification.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [
-        "b0FZWSe9Nmh7",
-        "kGEWUOCaDsHO"
-      ],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -289,6 +286,10 @@
       },
       "cell_type": "code",
       "source": [
+        "''' \n",
+        "Notebook is written using Fastai library.\n",
+        "Fastai library sits on the top of Pytorch.\n",
+        "'''\n",
         "from fastai.imports import *\n",
         "from fastai.transforms import *\n",
         "from fastai.conv_learner import *\n",
@@ -353,6 +354,7 @@
       },
       "cell_type": "code",
       "source": [
+        "# Creating indexes for validation set \n",
         "n = len(list(open(label_csv)))-1\n",
         "val_idxs = get_cv_idxs(n)\n",
         "n, len(val_idxs)"
@@ -385,6 +387,11 @@
       },
       "cell_type": "code",
       "source": [
+        "'''\n",
+        "Looking at the dataset.\n",
+        "Number of images per breed.\n",
+        "You can play around to get the good understanding of data.\n",
+        "'''\n",
         "df = pd.read_csv(label_csv)\n",
         "# df.head()\n",
         "\n",
@@ -750,6 +757,69 @@
     },
     {
       "metadata": {
+        "id": "gjT9TCUZb1w7",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Creating data object from dataset"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "45pbgyE9SyqZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "sz = 224    # Image size to train on\n",
+        "arch = resnet50    # Architecture used to train the model\n",
+        "bs = 58    # Batch size"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "u0xtziQZSlSk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "tfms_from_model is a function in transforms.py file in fastai library which is used to apply transforms to images\n",
+        "tfms_from_model(f_model, sz, aug_tfms=None, max_zoom=None, pad=0, crop_type=CropType.RANDOM, tfm_y=None, sz_y=None, pad_mode=cv2.BORDER_REFLECT, norm_y=True, scale=None)\n",
+        "f_model: architecture\n",
+        "sz: image size \n",
+        "aug_tfms: transformation you wish to apply like rotate image, filp image, etc (Read transforms.py for detailed imformation)\n",
+        "max_zoom: how much you want to zoom in an image \n",
+        "pad: padding\n",
+        "crop_type: how do you want to crop you image. Random crop, center crop, etc.\n",
+        "etc\n",
+        "'''  \n",
+        "tfms = tfms_from_model(arch, sz, aug_tfms=transforms_side_on, max_zoom=1.1)\n",
+        "\n",
+        "\n",
+        "'''\n",
+        "ImageClassfierData is a class which has from_csv method that works when you have dataset in one folder and their classes in a csv file.\n",
+        "You need to provide PATH to which you model others will get stored,\n",
+        "folder where your images are stored,\n",
+        "path to csv file, \n",
+        "test_name: folder name should be under PATH (optional),\n",
+        "val_idxs: indexes in csv file to be taken as entries for validation set,\n",
+        "tfms: transforms which initialized earlier to be applied to the images,\n",
+        "bs: batch size\n",
+        "\n",
+        "'''\n",
+        "data = ImageClassifierData.from_csv(PATH, 'train', f'{PATH}labels.csv', test_name='test', val_idxs=val_idxs, suffix='.jpg', tfms=tfms, bs=bs)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "1D6S4lPoQPbH",
         "colab_type": "text"
       },
@@ -822,31 +892,15 @@
       "metadata": {
         "id": "xmM5o4LhJeEE",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a3215c04-65aa-4f1a-ca28-c708cd33a478"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "fn = PATH+data.trn_ds.fnames[0]; fn;\n",
         "img = PIL.Image.open(fn); img"
       ],
-      "execution_count": 51,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-51-4e5f146843a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPATH\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrn_ds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPIL\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode)\u001b[0m\n\u001b[1;32m   2578\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2579\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2580\u001b[0;31m         \u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2581\u001b[0m         \u001b[0mexclusive_fp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2582\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '.train/1.png'"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -941,41 +995,20 @@
     },
     {
       "metadata": {
-        "id": "45pbgyE9SyqZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "sz = 224\n",
-        "arch = resnet50\n",
-        "bs = 58"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "u0xtziQZSlSk",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "tfms = tfms_from_model(arch, sz, aug_tfms=transforms_side_on, max_zoom=1.1)\n",
-        "data = ImageClassifierData.from_csv(PATH, 'train', f'{PATH}labels.csv', test_name='test', val_idxs=val_idxs, suffix='.jpg', tfms=tfms, bs=bs)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "yekBwvIdRrUs",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
+        "'''\n",
+        "Creating a learn object using ConvLearner class pretrained method\n",
+        "arch: architecture we intialized earlier\n",
+        "data: data object\n",
+        "precompute: if you use pretrained model, we need our activation to be precomputed which saves time. So, precompute = True will compute the activations before and \n",
+        "will not compute again and again for the network because we are only training the last layer.\n",
+        "ps: dropout probability\n",
+        "'''\n",
         "learn = ConvLearner.pretrained(arch, data, precompute=True, ps=0.5)"
       ],
       "execution_count": 0,
@@ -993,6 +1026,11 @@
       },
       "cell_type": "code",
       "source": [
+        "# fit method is used to train the model\n",
+        "'''\n",
+        "First argument: 1e-2 -> learning rate or a list of learning rates\n",
+        "Second argument: epochs\n",
+        "'''\n",
         "learn.fit(1e-2, 10)"
       ],
       "execution_count": 33,
@@ -1070,6 +1108,9 @@
       },
       "cell_type": "code",
       "source": [
+        "'''\n",
+        "lr_find() helps you find the optimal learning rate for a model\n",
+        "'''\n",
         "lrf = learn.lr_find()\n",
         "print(lrf)"
       ],
@@ -1228,6 +1269,7 @@
       },
       "cell_type": "code",
       "source": [
+        "# Unfreeze the layers so that the model can update the weights for all of them.\n",
         "learn.unfreeze()\n",
         "lr = np.array([1e-5, 1e-4, 1e-2])"
       ],
@@ -1246,6 +1288,9 @@
       },
       "cell_type": "code",
       "source": [
+        "'''\n",
+        "cycle_len is related to cyclic learning rate\n",
+        "'''\n",
         "# learn.fit(lr, 1, cycle_len=2)\n",
         "learn.fit(lr, 2, cycle_len=1, cycle_mult=2)"
       ],
